--- a/index.html
+++ b/index.html
@@ -152,13 +152,80 @@
                     <ul>
                         <li>Quelle méthode souhaitez-vous utiliser?
                             <ul>
-                                <li>Je veux créer des produits directement dans l'interface</li>
+                                <li>Je veux créer des produits directement dans l'interface
+                                    <ul>
+                                        <li>
+                                            <p><b>Solution</b></p>
+                                            <hr>
+                                            <p>Cette solution vous permet de créer vos produits directement dans l'interface.</p>
+                                            <p style="font-weight: bold;">Lisez le tutoriel en entier avant de commencer.</p>
+                                            <br>
+                                            <h2>Etape 1 : Créer les références</h2>
+                                            <ol>
+                                                <li>Dans le menu supérieur, cliquez sur <b>Classification</b></li>
+                                                <li>Cliquez sur le bouton bleu <b>Actions</b></li>
+                                                <li>Dans le menu qui s'ouvre cliquez sur <b>Créer des produits</b></li>
+                                                <li>Dans l'interface qui s'ouvre, éditer un produit par ligne. Vous pouvez coller une liste de référence depuis Excel.</li>
+                                                <li>Enfin cliquez sur le bouton <b>Créer les produits</b> en bas à droite.</li>
+                                            </ol>
+                                            <br>
+                                            <h2>Etape 2 : Classer les produits</h2>
+                                            <ol>
+                                                <li>Assurez vous d'être toujours sur le menu <b>Classification</b></li>
+                                                <li>Sélectionnez ensuite des produits et classés les dans le <b>panneau de droite</b> par glissé/déposé (comme avec des fichiers sur votre ordinateur)</li>
+                                            </ol>
+                                            <br>
+                                            <h2>Etape 3 : Compléter les attributs</h2>
+                                            <ol>
+                                                <li>Dans le menu supérieur, cliquez sur <b>Attributs</b></li>
+                                                <li>Compléter l'ensemble des attributs. Chaque attribut obligatoire est indiqué en rouge.</li>
+                                            </ol>
+                                            <br>
+                                            <div class="alert alert-danger">
+                                                <h4 class="alert-heading">Important!</h4>
+                                                <p>Pour afficher les attributs spécifiques à une catégorie vous devez au préalable sélectionner une catégorie de plus bas niveau.</p>
+                                                <p>Pour afficher le menu des catégories dans la vue <b>Attributs</b>, cliquez sur le bouton <img src="images/menu.jpg" alt=""> en haut à gauche.</p>
+                                            </div>
+                                            <h2>Etape 4 : Ajouter les images</h2>
+                                            <ol>
+                                                <li>Dans le menu supérieur, cliquez sur <b>Images</b></li>
+                                                <li>Sur chaque produit déposez un ou des fichiers dans le panneau de droite. <b>A ce stade l'image est associée au produit mais pas à la vue.</b></li>
+                                                <li>Lorsque vous voyez la miniature de l'image que vous venez de déposer, il faut que vous la glissiez/déposé dans la vue dans laquelle vous souhaitez l'associer.</li>
+                                            </ol>
+                                            <br>
+                                            <h2>Etape 5 : Publiez les produits</h2>
+                                            <ol>
+                                                <li>Sélectionnez une liste de produit</li>
+                                                <li>Cliquez sur le bouton bleu <b>Actions</b></li>
+                                                <li>Cliquez ensuite sur <b>Publier les produits</b></li>
+                                            </ol>
+                                            <br>
+                                            <div class="alert alert-success">
+                                                <h4 class="alert-heading">Félicitations!</h4>
+                                                <p>Vous venez de publier vos premiers produits</p>
+                                                <p>N'hésitez pas à consulter les autres tutoriaux pour gagner plus de temps</p>
+                                            </div>
+                                            <hr>
+                                            <h2>Questions posées fréquement</h2>
+                                            <p><b>J'ai un message d'erreur de publication</b></p>
+                                            <p>Vérifier dans l'ordre les points suivants et recommencez :</p>
+                                            <ol>
+                                                <li>Est-ce que vos codes EAN 13 sont valides?</li>
+                                                <li>Est-ce que vos produits sous classés dans une catégorie de dernier niveau?</li>
+                                                <li>Est-ce que vous avez complété tous les attributs obligatoires?</li>
+                                                <li>Est-ce que vous avez vérifié que vos produits n'auraient pas des attributs obligatoires non renseignés?</li>
+                                                <li>Est-ce que vous avez complété toutes les images obligatoires?</li>
+                                            </ol>
+                                        </li>
+                                    </ul>
+                                </li>
                                 <li>Je veux télécharger un template et travailler sur Excel
                                     <ul>
                                         <li>
                                             <p><b>Tutoriel</b></p>
                                             <hr>
                                             <p>Cette méthode vous permet de télecharger un fichier Excel dans le format de Fnac Marketplace.</p>
+                                            <p style="font-weight: bold;">Lisez le tutoriel en entier avant de commencer.</p>
                                             <br>
                                             <h2>Etape 1</h2>
                                             <p>Télécharger le fichier Excel en cliquant sur le bouton ci-dessous :</p>
@@ -197,7 +264,22 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li>J'ai un fichier dans mon format que je souhaite importer</li>
+                                <li>J'ai un fichier dans mon format que je souhaite importer
+                                    <ul>
+                                        <li>Que contient ce fichier?
+                                            <ul>
+                                                <li>Seulement quelques attributs (EAN, SKU, titre, description, tarifs)</li>
+                                                <li>Beaucoup de produits, beaucoup d'attributs et beaucoup de catégories
+                                                    <ul>
+                                                        <li>
+                                                            <p><b>Tutoriel</b></p>
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </li>
                                 <li>Je ne sais pas répondre, aidez-moi à choisir
                                     <ul>
                                         <li>Combien de produits souhaitez-vous créer?
