--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                                                 <li>Assurez vous d'être toujours sur le menu <b>Classification</b></li>
                                                 <li>Sélectionnez ensuite des produits et classés les dans le <b>panneau de droite</b> par glissé/déposé (comme avec des fichiers sur votre ordinateur)</li>
                                             </ol>
+                                            <img src="images/classer.gif" alt="" width="95%">
                                             <br>
                                             <h2>Etape 3 : Compléter les attributs</h2>
                                             <ol>
@@ -230,7 +231,7 @@
                                             <h2>Etape 1</h2>
                                             <p>Télécharger le fichier Excel en cliquant sur le bouton ci-dessous :</p>
                                             <br>
-                                            <a target="_blank" href="https://productlive.blob.core.windows.net/import/8d9cf79287e93f5b92cd90d7abbb94edd6927dec/import_template_fnac.xlsx" class="btn btn-primary">Télécharger le fichier Excel Fnac Marketplace</a>
+                                            <a target="_blank" href="https://productlive.blob.core.windows.net/import/9cea279a267fbd45663d1cb65d38c83c70b3d676/import_template_fnac_v3.xlsx" class="btn btn-primary">Télécharger le fichier Excel Fnac Marketplace</a>
                                             <br>
                                             <br>
                                             <h2>Etape 2</h2>
