--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 </head>
 <body>
     <div id="reload">
+        <a href="https://plcrousti.github.io/" class="btn btn-default btn-sm" target="_blank">Ouvrir l'aide dans un nouvel onglet</a>
         <button id="reload-btn" type="button" class="btn btn-default btn-sm">Revenir à l'assistant</button>
     </div>
     <!-- <div id="tutorials">
